WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228859
caret-color does not work on first click in ios
https://bugs.webkit.org/show_bug.cgi?id=228859
Summary
caret-color does not work on first click in ios
Rostislav Shtanko
Reported
2021-08-06 02:08:25 PDT
Hello! I faced a problem with CSS in ios 13 - custom caret color, which can be defined by caret-color style is not working on first browser load.
https://developer.mozilla.org/en-US/docs/Web/CSS/caret-color
I provided an example in the attachment. This problem can be reproduced at least in ios 13.3, ios 13.6, and in ios 14.2 (browsers: safari, google chrome). In the example, I'm using an ios simulator, but actually, the problem is the same on real devices. IOS Version in the example is 13.3.
Attachments
example of invalid caret color
(3.05 MB, image/gif)
2021-08-06 02:27 PDT
,
Rostislav Shtanko
no flags
Details
Patch
(20.10 KB, patch)
2021-08-08 15:28 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rostislav Shtanko
Comment 1
2021-08-06 02:27:19 PDT
Created
attachment 435059
[details]
example of invalid caret color
Wenson Hsieh
Comment 2
2021-08-07 12:52:34 PDT
This doesn't reproduce for me on iOS 15 (I tested iPhone w/ software keyboard and iPad with hardware keyboard).
Wenson Hsieh
Comment 3
2021-08-07 12:57:13 PDT
(In reply to Wenson Hsieh from
comment #2
)
> This doesn't reproduce for me on iOS 15 (I tested iPhone w/ software > keyboard and iPad with hardware keyboard).
Never mind, I'm able to reproduce now — this only happens if I focus the input field right after backgrounding Safari and bringing it to the foreground again.
Radar WebKit Bug Importer
Comment 4
2021-08-08 14:36:10 PDT
<
rdar://problem/81674787
>
Wenson Hsieh
Comment 5
2021-08-08 15:28:01 PDT
Created
attachment 435159
[details]
Patch
Wenson Hsieh
Comment 6
2021-08-08 18:16:33 PDT
Comment on
attachment 435159
[details]
Patch Thanks for the review!
EWS
Comment 7
2021-08-08 18:21:48 PDT
Committed
r280767
(
240352@main
): <
https://commits.webkit.org/240352@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435159
[details]
.
Rostislav Shtanko
Comment 8
2021-08-09 00:58:01 PDT
Thank you for the patch. Is it possible to use it in my safari 13 (ios 13)?
Wenson Hsieh
Comment 9
2021-08-09 07:56:30 PDT
(In reply to Rostislav Shtanko from
comment #8
)
> Thank you for the patch. Is it possible to use it in my safari 13 (ios 13)?
Unfortunately, not on iOS 13. I will leave an update when this fix makes it into a beta release of iOS — thank you for your patience!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug