Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm
@@ -336,13 +336,8 @@ void WebPage::getPlatformEditorState(Frame& frame, EditorState& result) const
     postLayoutData.atStartOfSentence = frame.selection().selectionAtSentenceStart();
     postLayoutData.insideFixedPosition = startNodeIsInsideFixedPosition || endNodeIsInsideFixedPosition;
     if (!selection.isNone()) {
-        if (m_focusedElement && m_focusedElement->renderer()) {
-            // FIXME: The caret color style should be computed using the selection caret's container
-            // rather than the focused element. This causes caret colors in editable children to be
-            // ignored in favor of the editing host's caret color.
-            auto& renderer = *m_focusedElement->renderer();
-            postLayoutData.caretColor = CaretBase::computeCaretColor(renderer.style(), renderer.element());
-        }
+        if (RefPtr container = selection.start().containerNode(); container && container->renderer() && selection.isContentEditable())
+            postLayoutData.caretColor = CaretBase::computeCaretColor(container->renderer()->style(), container.get());
 
         if (auto editableRootOrFormControl = makeRefPtr(enclosingTextFormControl(selection.start()) ?: selection.rootEditableElement())) {
             postLayoutData.selectionClipRect = rootViewInteractionBounds(*editableRootOrFormControl);
